--- a/assets/csa_tables.css
+++ b/assets/csa_tables.css
@@ -1,57 +1,64 @@
-#main_dash_csa_tables{
+#main_dash_csa_tables {
     margin-bottom: 20px;
     margin-top: 10px;
-
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
-#csa_table_row{ display: flex;
+#csa_table_row {
+    display: flex;
     justify-content: space-between;
 }
 
-#spr_spr_card_body{
+#spr_spr_card_body {
     width: 100%;
-
-
 }
-#spr_spr_card{
+
+#spr_spr_card {
     border-radius: 10px;
     width: 100%;
     border: 2px solid #ccc;
     box-shadow: 5px 5px 5px lightblue;
-
 }
-#spr_spr_col{
+
+#spr_spr_col {
     width: 100%;
-
 }
 
-#base_spr_card_body{
-     width: 100%;
-
+#base_spr_card_body {
+    width: 100%;
 }
-#base_spr_card{
+
+#base_spr_card {
     border-radius: 10px;
-    width: 100%;
+    width: 98%;
     border: 2px solid #ccc;
     box-shadow: 5px 5px 5px lightblue;
 
 
-
-
 }
 
-#base_spr_col{
+@media screen and (min-width: 0px) and (max-width: 950px) {
 
-    width: 100%;
-    margin-right: 20px; /* This is the one to add margin to*/
-
-}
-
-@media screen and (min-width: 0px) and (max-width:950px) {
-    #base_spr_col,#spr_spr_col {
-    margin: 10px;
-
+    #spr_spr_card {
+        width: 99%;
     }
+}
+@media screen and (min-width: 0px) and (max-width: 950px) {
 
+    #base_spr_card {
+        width: 99%;
+    }
+}
 
+#base_spr_col {
+    width: 100%;
+    margin-right: 0px; /* This is the one to add margin to */
+}
+
+@media screen and (min-width: 0px) and (max-width: 950px) {
+    #base_spr_col,
+    #spr_spr_col {
+        margin: 10px;
+    }
 }
