--- a/assets/map.css
+++ b/assets/map.css
@@ -68,11 +68,13 @@
 
 /* Default div on main page that holds the map div */
 #main_dash_map_div {
-     height: 100%;
-     margin-top: 10px;
-     height: 60vh;
-     border-radius: 10px;
-     margin-right: 0px;
+
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    border-radius: 10px;
+    margin-right: 0px;
 
 
 }
@@ -80,25 +82,20 @@
 @media screen and (min-width: 0px) and (max-width:950px) {
     #main_dash_map_div {
          height: 100%;
+         width: 96%;
          margin-top: 10px;
-         height: 60vh;
          border-radius: 10px;
-         margin-right: 35px;
+         margin-right:35px;
+
         /* Adjust font size for screens in this range */
     }
 }
-
-
-
-
-
-
 
 @media screen and (min-width: 0px) and (max-width:950px) {
     #mapbox_div {
         font-size: 20px;
         margin-left: 10px;
-        margin-right: 20px;
+        margin-right: 35px;
         margin-top: 0px;
         overflow: hidden;/* Corrected the property name to 'padding-top' */
         /* Adjust font size for screens in this range */
